Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/SynchronizedClass.out
SynchronizedClass.java:9:21: compiler.err.mod.not.allowed.here: synchronized
1 error
